package com.logicloop.OrderInfo;

public class FactoryInfo {
    private String productionStatus;

    public String queryStatus(String vehicleId) {
        // TODO implement business logic
        return this.productionStatus;
    }
}
